data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1696.wast
;; 7. **Test Br_if with Non-zero Condition**:    - **Description**: Execute a `br_if` with a non-zero condition and ensure that it correctly performs the branch.    - **Constraint**: A non-zero condition should correctly switch control to the specified branch label.    - **Incorrect Condition Evaluation**: The `br_if` fails to take the branch, continuing execution where it should not.

(assert_invalid
  (module (func $br_if-non-zero-condition
    (block (br_if 0 (i32.const 1)) (unreachable))
  ))
  "unexpected end of module"
)